# xnpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg.json
xnpp-content-pipeline/: CMakeLists.txt  source.cpp
xnpp-content-pipeline/include/Xna/ContentPipeline/: App.hpp  BuildContent.hpp  BuildCoordinator.hpp  BuildCoordinatorSettings.hpp  BuildItem.hpp  BuildItemCollection.hpp  BuildRequest.hpp  BuildRequestFix.hpp  BuildTask.hpp  CompileItem.hpp  ContentBuildLogger.hpp  ContentIdentity.hpp  ContentImporter.hpp  ContentImporterAttribute.hpp  ContentImporterContext.hpp  ContentItem.hpp  ContentProcessor.hpp  ContentProcessorContext.hpp  CustomComparerCollection.hpp  ExternalReference.hpp  ImporterManager.hpp  Macros.hpp  NamedValueDictionary.hpp  OpaqueDataDictionary.hpp  PathUtils.hpp  ProcessorManager.hpp  Shared.hpp  TimestampCache.hpp  XnaContentImporterContext.hpp  XnaContentProcessorContext.hpp
xnpp-content-pipeline/include/Xna/ContentPipeline/Audio/: AudioContent.hpp  AudioFormat.hpp  AudioHelper.hpp  Shared.hpp  SongContent.hpp  SoundEffectContent.hpp  WaveFormatEx.hpp
xnpp-content-pipeline/include/Xna/ContentPipeline/Graphics/: BitmapContent.hpp  CharacterCollection.hpp  CharacterRegion.hpp  DxtBitmapContent.hpp  FontDescription.hpp  MipmapChain.hpp  MipmapChainCollection.hpp  PixelBitmapContent.hpp  SpriteFontContent.hpp  Texture2DContent.hpp  TextureContent.hpp
xnpp-content-pipeline/include/Xna/ContentPipeline/Importers/: FontDescriptionImporter.hpp  OggImporter.hpp  TextureImporter.hpp  WavImporter.hpp  WmaImporter.hpp
xnpp-content-pipeline/include/Xna/ContentPipeline/Processors/: FontDescriptionProcessor.hpp  Shared.hpp  SongProcessor.hpp  SoundEffectProcessor.hpp  TextureProcessor.hpp
xnpp-content-pipeline/include/Xna/Core/: CSharp.hpp  Graphics.hpp  Macros.hpp  Numeric.hpp  Volume.hpp
xnpp-content-pipeline/source/Xna/ContentPipeline/: App.cpp  BuildContent.cpp  BuildCoordinator.cpp  BuildCoordinatorSettings.cpp  BuildItemCollection.cpp  BuildTask.cpp  ImporterManager.cpp  OpaqueDataDictionary.cpp  PathUtils.cpp  ProcessorManager.cpp  TimestampCache.cpp  XnaContentProcessorContext.cpp
xnpp-content-pipeline/source/Xna/ContentPipeline/Audio/: AudioFormat.cpp  AudioHelper.cpp
xnpp-content-pipeline/source/Xna/ContentPipeline/Graphics/: FontDescription.cpp  MipmapChainCollection.cpp
xnpp-content-pipeline/source/Xna/ContentPipeline/Importers/: FontDescriptionImporter.cpp  OggImporter.cpp  TextureImporter.cpp  WavImporter.cpp  WmaImporter.cpp
xnpp-content-pipeline/source/Xna/ContentPipeline/Processors/: FontDescriptionProcessor.cpp  SongProcessor.cpp  SoundEffectProcessor.cpp  TextureProcessor.cpp
xnpp-content-pipeline/tools/: README.md
xnpp-framework/: CMakeLists.txt
xnpp-framework/cmake/: XnppConfig.cmake.in
xnpp-framework/include/Xna/: Audio.hpp  Config.hpp  Content.hpp  Export.hpp  Framework.hpp  Graphics.hpp  Input.hpp  Media.hpp
xnpp-framework/include/Xna/CSharp/: Attribute.hpp  BitConverter.hpp  Collection.hpp  Event.hpp  Exception.hpp  Path.hpp  Type.hpp
xnpp-framework/include/Xna/CSharp/Drawing/: Rectangle.hpp  Size.hpp
xnpp-framework/include/Xna/CSharp/IO/: BinaryReader.hpp  BinaryWriter.hpp  FileStream.hpp  MemoryStream.hpp  Stream.hpp
xnpp-framework/include/Xna/Framework/: BoundingBox.hpp  BoundingFrustum.hpp  BoundingSphere.hpp  Color.hpp  Curve.hpp  CurveKey.hpp  CurveKeyCollection.hpp  FrameworkDispatcher.hpp  IPackedVector.hpp  Input.hpp  MathHelper.hpp  Matrix.hpp  PackUtils.hpp  Plane.hpp  Point.hpp  Quaternion.hpp  Ray.hpp  Rectangle.hpp  Shared.hpp  TitleContainer.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
xnpp-framework/include/Xna/Framework/Audio/: AudioEmitter.hpp  AudioFormat.hpp  AudioHelper.hpp  AudioListener.hpp  DynamicSoundEffectInstance.hpp  LoopRegion.hpp  Shared.hpp  SoundEffect.hpp  SoundEffectInstance.hpp  UnsafeNativeStructures.hpp  WavFile.hpp
xnpp-framework/include/Xna/Framework/Content/: ContentManager.hpp  ContentReader.hpp  ContentSerializerAttribute.hpp  ContentTypeActivator.hpp  ContentTypeReader.hpp  ContentTypeReaderManager.hpp  _ContentManager.hpp  _ContentTypeReaderManager.hpp
xnpp-framework/include/Xna/Framework/Game/: DrawableGameComponent.hpp  Game.hpp  GameClock.hpp  GameComponent.hpp  GameComponentCollection.hpp  GameHost.hpp  GameServiceContainer.hpp  GameTime.hpp  GameWindow.hpp  GraphicsDeviceInformation.hpp  GraphicsDeviceManager.hpp  IDrawable.hpp  IGameComponent.hpp  IGraphicsDeviceManager.hpp  IUpdateable.hpp  LaunchParameters.hpp  _Game.hpp
xnpp-framework/include/Xna/Framework/Graphics/: BlendState.hpp  Buffer.hpp  Buffers.hpp  DeclarationBinding.hpp  DepthStencilState.hpp  DisplayMode.hpp  DisplayModeCollection.hpp  DynamicIndexBuffer.hpp  DynamicVertexBuffer.hpp  GraphicsAdapter.hpp  GraphicsContentHelper.hpp  GraphicsDevice.hpp  GraphicsResource.hpp  IDynamicGraphicsResource.hpp  IGraphicsDeviceService.hpp  IVertexType.hpp  IndexBuffer.hpp  Model.hpp  ModelBone.hpp  ModelBoneCollection.hpp  ModelMesh.hpp  ModelMeshCollection.hpp  ModelMeshPart.hpp  ModelMeshPartCollection.hpp  OcclusionQuery.hpp  PresentationParameters.hpp  RasterizerState.hpp  RenderTarget2D.hpp  RenderTargetBinding.hpp  RenderTargetCube.hpp  SamplerState.hpp  Shared.hpp  SpriteBatch.hpp  SpriteFont.hpp  Texture.hpp  Texture2D.hpp  Texture3D.hpp  TextureCollection.hpp  TextureCube.hpp  VertexBuffer.hpp  (+13 more)
xnpp-framework/include/Xna/Framework/Input/: GamePad.hpp  GamePadButtons.hpp  GamePadCapabilities.hpp  (+9 more)
xnpp-framework/include/Xna/Internal/: App.hpp  Export.hpp  Macros.hpp  Misc.hpp  TypeRegistry.hpp
xnpp-framework/include/Xna/Platform/: Platform.hpp  _Platform.hpp
xnpp-framework/shaders/: sprite.fs.sc  sprite.vs.sc  varying.def.sc
xnpp-framework/sources/Xna/: App.cpp
xnpp-framework/sources/Xna/CSharp/: Event.cpp  Type.cpp
xnpp-framework/sources/Xna/Framework/: FrameworkDispatcher.cpp  PackUtils.cpp  TitleContainer.cpp  TitleLocation.hpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
xnpp-framework/tools/bgfx/: shaderc.txt
xnpp-game-test/: CMakeLists.txt  Game.cpp
(+210 files in other folders)
